@startuml

title __RESOURCE's Class Diagram__\n

  package taskman {
    package taskman.backend {
      package taskman.backend.resource {
        class Reservation {
            + Reservation()
            + getTask()
            - setTask()
            + getResource()
            - setResource()
            + getTimeSpan()
            - setTimeSpan()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.resource {
        interface Resource {
            {abstract} + firstAvailableTime()
            {abstract} + getType()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.resource {
        class ResourceItem {
            - reservations : ArrayList<Reservation>
            - availability : HashMap<Integer, AvailabilityPeriod>
            + ResourceItem()
            + firstAvailableTime()
            - calculateStartTime()
            - calculateEndTime()
            + getType()
            - setType()
            + addReservation()
            - getReservations()
            - getAvailability()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.resource {
        class ResourceManager {
            - resourceTypes : Set<ResourceType>
            + ResourceManager()
            + getResourceType()
            + addResourceTye()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.resource {
        class ResourceType {
            - name : String
            + ResourceType()
            + getName()
            - setName()
            + hashCode()
        }
      }
    }
  }
  

  Reservation o-- Task : task
  Reservation o-- Resource : resource
  Reservation o-- TimeSpan : timeSpan
  ResourceItem -up-|> Resource
  ResourceItem o-- ResourceType : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
